<resources>
    <string name="app_name">TP4PersistanceDeDonnées</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Liste des étudiants</string>
    <string name="second_fragment_label">Nouvel étudiant</string>
    <string name="next">Next</string>
    <string name="previous">Annuler</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="cneEtudiant">CNE: </string>
    <string name="nomEtudiant">Nom: </string>
    <string name="preEtudiant">Prenom: </string>
    <string name="sexeEtudiant">Sexe: </string>
    <string name="dateNEtu">Date de naissance: </string>
    <string name="ajouter">Ajouter un étudiant:</string>

</resources>